# ftmplt

./: .gitignore  .pre-commit-config.yaml  README.md  ftmplt.py  pyproject.toml  setup.cfg  setup.py  tests.py
.github/workflows/: publish.yml  tests.yml
