
# -- Project metadata ------------------------------------------------------------------

[project]
name = "ftmplt"
description = "Simple string parsing and formatting using Python's format strings"
readme = "README.md"
authors = [
    {name = "Dylan Jones", email = "dylanljones94@gmail.com"},
]
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
    "pytest",
    "pytz"
]


# -- Build -----------------------------------------------------------------------------

[build-system]
requires = [
    "setuptools >= 61.0.0",
    "setuptools_scm[toml] >= 4",
    "setuptools_scm_git_archive",
]
build-backend = "setuptools.build_meta"


[tool.setuptools]
py-modules = ["ftmplt"]
platforms = ["any"]
zip-safe = false
include-package-data = true


[tool.setuptools_scm]
write_to = "_version.py"
git_describe_command = "git describe --dirty --tags --long --match * --first-parent"


# -- Ruff ------------------------------------------------------------------------------

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".idea",
    "__pycache__",
    "build",
    "dist",
    "_version.py",
    ".ruff_cache",
    "__pypackages__",
    "main*.py"
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E", "F"]
ignore = []
# Enable the isort rules.
extend-select = ["I"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
