[metadata]
name = ftmplt
description = Simple string parsing and formatting using Python's format strings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dylanljones/ftmplt
author = Dylan Jones
author_email = dylanljones94@gmail.com
license = MIT
license_file = LICENSE

[options]
py_modules=ftmplt
install_requires =
python_requires = >=3.7
include_package_data = True
platforms = any
zip_safe = False

[options.extras_require]
build =
    wheel
    setuptools
    setuptools-scm[toml]
test =
    # hypothesis>=6.0.0
    pytest
    pytest-cov

[aliases]
test = pytest

[pydocstyle]
add-ignore = D105  # ignore undocumented dunder methods like ``__str__`

[flake8]
max-line-length = 88
ignore = D203
extend-ignore = E203
per-file-ignores = __init__.py:F401
exclude =
    .git,
    .idea,
    __pycache__,
    build,
    dist,
    */_version.py,
    docs/*

[coverage:run]
branch = False
source = fparse

[coverage:report]
exclude_lines =
    pragma: no cover

    def __repr__
    def __str__

    @abstract

    @property

    raise AssertionError
    raise NotImplementedError

    if 0:
    if __name__ == .__main__.:

ignore_errors = True
omit =
    _version.py
